<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDC2A1"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#8A858282"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/register_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/bh_logo" />

    <LinearLayout
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/text_first_name"
            android:text="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="First Name"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/text_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Last Name"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/text_phone_number"
            android:text="@string/phone_no" />

        <EditText
            android:id="@+id/text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Phone Number"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_address"
            android:text="@string/address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_address"
                android:layout_width="219dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/text_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="city or postalAddress"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/text_email"
            android:text="@string/email" />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/text_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/text_password"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/text_hostel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/text_hostel_name"
            android:text="@string/hostel_name"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/text_hostel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="hostelName"
            android:ems="10"
            android:hint="@string/hostel_name"
            android:inputType="textPersonName"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/txt_singles_av"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_singles"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txt_singles_available_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number_of_single_rooms"
            android:inputType="number"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/txt_doubles_av"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_doubles"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/txt_doubles_available_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number_of_double_rooms"
            android:inputType="number"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/text_price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_reg"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/average_room_price"
            android:inputType="number"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_design"
            android:hapticFeedbackEnabled="true"
            android:text="@string/register" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnRegisterBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>