<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#020202">

    <ImageView
        android:id="@+id/img_hostel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_channel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_hostel"
        app:layout_constraintTop_toBottomOf="@+id/img_hostel">

        <TextView
            android:id="@+id/text_hostels_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/hostel_name"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_hostel_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hostel_location"
            android:textColor="#979797"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/text_hostels_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_hostels_name"
            app:layout_constraintTop_toBottomOf="@+id/text_hostels_name" />

        <TextView
            android:id="@+id/link_to_hostel"
            android:layout_width="151dp"
            android:layout_height="62dp"
            android:background="@color/purple_200"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/view_hostel_details"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toEndOf="@+id/text_hostel_location"
            app:layout_constraintTop_toTopOf="@+id/text_hostels_name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="226dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overall_rating"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_hostels_name" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="239dp"
            android:layout_height="57dp"
            android:indeterminate="false"
            android:max="5"
            android:numStars="5"
            android:progressTint="#FFC107"
            android:rating=".7"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>